<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#479fff"
    android:layout_margin="5dp"
    android:elevation="2dp"

    >



    <!-- FOOD IMAGE -->

    <!-- <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:contentDescription="@string/food_image"
        android:src="@drawable/food2"
        />
        -->


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:contentDescription="@string/food_image"
        fresco:placeholderImage="@drawable/food2"
        android:layout_margin="3dp"
        />


    <!-- FOOD NAME -->
    <TextView
        android:id="@+id/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_food_name"
        android:layout_toEndOf="@+id/image"
        />




    <!-- FOOD PRICE -->
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_price"
        android:padding="5dp"
        android:textStyle="italic"

        android:layout_below="@+id/image"
        android:gravity="center_horizontal"

        android:layout_alignStart="@+id/image"
        android:layout_alignEnd="@+id/image"


        />

    <!-- FOOD DESCRIPTION -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:maxLines="4"
        android:text="@string/lorem_ipsum"
        android:textStyle="italic"

        android:layout_below="@+id/name"
        android:layout_toEndOf="@+id/image"
        android:layout_toStartOf="@id/numPicker"
        />

    <LinearLayout
        android:id="@+id/numPicker"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        >


        <!-- MINUS BUTTON -->
        <Button
            android:onClick="onMinusClicked"
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/minus"
            />


        <!-- AMOUNT FIELD -->
        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:width="60dp"
            android:textAlignment="center"
            android:text="@string/default_amount"

            />

        <!-- PLUS BUTTON -->
        <Button
            android:onClick="onPlusClicked"
            android:id="@+id/plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/plus"
            />
    </LinearLayout>
</RelativeLayout>