<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#e2e2e2"
    android:layout_margin="5dp"
    android:elevation="2dp"

    >



    <!-- FOOD IMAGE -->
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:contentDescription="@string/food_image"
        fresco:placeholderImage="@drawable/food2"
        android:layout_margin="3dp"
        />


    <!-- FOOD NAME -->
    <TextView
        android:id="@+id/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_food_name"
        android:layout_toEndOf="@+id/image"
        />






    <!-- FOOD DESCRIPTION -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:maxLines="4"
        android:text="@string/lorem_ipsum"
        android:textStyle="italic"

        android:layout_below="@+id/name"
        android:layout_toEndOf="@+id/image"
        android:layout_toStartOf="@id/prices"
        />

    <!-- FOOD STATE -->
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:maxLines="1"
        android:text="Status: não pedido"
        android:textStyle="italic|bold"

        android:layout_below="@+id/description"
        android:layout_toEndOf="@+id/image"
        android:layout_toStartOf="@id/prices"
        />

    <LinearLayout
        android:id="@+id/prices"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!-- FOOD PRICE -->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 000,00 un."
            android:padding="5dp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/amountField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x1"
            android:padding="5dp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 000,00"
            android:padding="5dp"
            android:textStyle="italic|bold"
            android:gravity="center_horizontal"
            />



    </LinearLayout>
</RelativeLayout>